crates/macro/tests/ui/fn_with_bogus_export_name.stderr
error[E0539]: malformed `export_name` attribute input
 --> tests/ui/fn_with_bogus_export_name.rs:4:1
  |
4 | #[unsafe(export_name("what"))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: must be of the form: `#[export_name = "name"]`

error[E0539]: malformed `export_name` attribute input
  --> tests/ui/fn_with_bogus_export_name.rs:10:1
   |
10 | #[unsafe(export_name = 10)]
   | ^^^^^^^^^^^^^^^^^^^^^^^--^^
   | |                      |
   | |                      expected a string literal here
   | help: must be of the form: `#[export_name = "name"]`
